--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
   <!-- "reach out" section -->
   <section id="reach-out" class="contact">
     <h2 class="section-title secondary-border">Reach Out</h2>
+  
     <div class="contact-info">
         <iframe 
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3146.0105900396065!2d-120.42504984899058!3d37.953538709527535!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8090c46e315aaf1b%3A0xb32d2fcd2023b726!2sMain%20St%2C%20Jamestown%2C%20CA%2095327!5e0!3m2!1sen!2sus!4v1623722961910!5m2!1sen!2sus" 
@@ -153,8 +154,8 @@
         allowfullscreen="" 
         loading="lazy">
         </iframe>
-    </div>
-    <div class="location">
+     
+        <div>
         <h3>Run Buddy</h3>
         <p>
           Any questions or concerns before signing up?
@@ -168,10 +169,10 @@
             P: 555.RUN.BUDZ (555.786.2839)<br/>
             E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
         </address>
+      </div>
     </div>
 
   </section>
-
 
 
   <!-- footer -->
