trainers flex fixed

--- a/index.html
+++ b/index.html
@@ -129,8 +129,10 @@
 
   <!-- "meet the trainers" section -->
   <section id="your-trainers" >
+    <div class="flex-row">
     <h2 class="section-title primary-border">Meet The Trainers</h2>
-   
+    </div>
+    
   <div class="trainers">  
     <article class="trainer">
       <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
@@ -143,9 +145,9 @@
           </p>
         </div>
     </article>
-   </div>
+   
 
-   <div> 
+ 
    <article class="trainer">
       <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
       <div class="tainer-bio">
@@ -157,9 +159,9 @@
           </p>
         </div>
     </article>
-   </div>
+ 
    
-   <div>
+   
    <article class="trainer">
         <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
         <div class="tainer-bio">
@@ -172,7 +174,7 @@
         </div>
     </article>
     </div>
-   </div>      
+      
   </section>
 
 
