media-queries-to-set

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <title>Run Buddy</title>
   <link rel="stylesheet" href="./assets/css/style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
  </head>
 
 <body>
@@ -60,7 +61,7 @@
         <label for="trainer-no">No</label> 
     </p>
     <p>
-       I acknowledge that I am at least 18 years of acknowledge
+       I acknowledge that I am at least 18 years of age
        <input type="checkbox" name="age-confirm" id="age-confirmed" />
        <label for="age-confirmed"></label> 
     </p>   
